# qmk-window-notifier

./: Cargo.toml  QMK-Window-Notifier-Setup.wixpdb  REQUIREMENTS.md  Readme.md  installer.wixobj  query
.github/workflows/: pages.yml
.kiro/specs/cross-platform-architecture-reconciliation/: design.md  requirements.md  tasks.md
.kiro/specs/gui-only-documentation/: design.md  requirements.md  tasks.md
.kiro/specs/installer-shutdown-communication/: design.md  requirements.md  tasks.md
.kiro/specs/jekyll-site-routing-fix/: design.md  requirements.md  tasks.md
.kiro/specs/window-change-listener/: requirements.md
.kiro/specs/windows-service/: prompt.md  requirements.md
.kiro/specs/windows-settings-management/: requirements.md  tasks.md
docs/: Gemfile  README.md  _config.yml  configuration.md  examples.md  index.md  installation.md  qmk-integration.md  troubleshooting.md  usage.md
docs/_tabs/: configuration.md  home.md  installation.md  qmk-integration.md  usage.md
packaging/linux/: qmk-window-notifier.sh
packaging/linux/arch/: .gitignore  PKGBUILD  qmk-window-notifier.install  qmkonnect-0.1.0-1-x86_64.pkg.tar.zst
packaging/linux/arch/pkg/qmkonnect/: .BUILDINFO  .INSTALL  .MTREE  .PKGINFO
packaging/linux/arch/pkg/qmkonnect/etc/udev/rules.d/: 99-qmkonnect.rules.template
packaging/linux/systemd/: qmk-window-notifier.service.template  qmkonnect.service.template
packaging/linux/udev/: 99-qmk-window-notifier.rules.template
packaging/macos/: .gitignore  Icon.icns  QMKonnect.dmg  build.sh  install-autostart.sh  io.mulletware.qmk-window-notifier.plist  uninstall.sh
packaging/macos/QMKonnect.app/Contents/: Info.plist
packaging/macos/QMKonnect.app/Contents/MacOS/: qmkonnect
packaging/macos/QMKonnect.app/Contents/_CodeSignature/: CodeResources
packaging/windows/: README.md  build-installer.bat  build-installer.ps1  installer.wxs  license.rtf
src/: main.rs  service.rs  tray.rs
src/core/: config.rs  mod.rs  notifier.rs  types.rs
src/runners/: linux.rs  macos.rs  mod.rs  windows.rs
