[package]
name = "qmk-window-notifier"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-platform window activity notifier for QMK keyboards"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qmk_notifier = { package = "qmk_notifier", path = "../qmk_notifier" }
ctrlc = "3.4"
block = "0.1"
once_cell = "1.21"
dirs = "5.0"
toml = "0.5"
hidapi = "2.6.3"
tao = "0.32.8"
tray-icon = "0.20.0"
image = "0.25.5"

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
hyprland = { version = "0.4.0-beta.2", optional = true }
zbus = { version = "3.15", optional = true }

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.7", optional = true }
objc2-foundation = "0.3.0"
objc2-core-foundation = "0.3.0"
core-foundation = { version = "0.9", optional = true }
core-graphics = { version = "0.23.2", optional = true }
libc = "0.2"
dispatch = { version = "0.2", optional = true }


[features]
default = ["hyprland",  "macos"]
hyprland = ["dep:hyprland"]
macos = ["dep:objc", "dep:core-foundation", "dep:core-graphics", "dep:dispatch"]

[[bin]]
name = "qmk-window-notifier"
path = "src/main.rs"
