[package]
name = "qmk-window-notifier"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Cross-platform window activity notifier for QMK keyboards"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qmk_notifier = { package = "qmk_notifier", git = "https://github.com/dabstractor/qmk_notifier" }
ctrlc = "3.4"
block = "0.1"
once_cell = "1.21"
dirs = "5.0"
toml = "0.5"
hidapi = "2.6.3"
tao = "0.32.8"
tray-icon = "0.20.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
hyprland = { version = "0.4.0-beta.2", optional = true }
zbus = { version = "3.15", optional = true }

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "0.2.7", optional = true }
objc2-foundation = "0.3.0"
objc2-core-foundation = "0.3.0"
core-foundation = { version = "0.9", optional = true }
core-graphics = { version = "0.23.2", optional = true }
libc = "0.2"
dispatch = { version = "0.2", optional = true }

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_Security",
    "Win32_UI_Controls",
    "Win32_Graphics_Gdi",
    "Win32_System_Console",
] }
windows-service = "0.7.0"
log = "0.4"
env_logger = "0.11"
eventlog = "0.2.2"
single-instance = "0.3"



[features]
default = ["hyprland",  "macos"]
hyprland = ["dep:hyprland"]
macos = ["dep:objc", "dep:core-foundation", "dep:core-graphics", "dep:dispatch"]

[[bin]]
name = "qmk-window-notifier"
path = "src/main.rs"

# Optimize for size
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = "abort"     # Abort on panic instead of unwinding
strip = true        # Strip symbols from binary


